src/less/front-page.less
.hero {
  background-position: 50% 50%;
  background-size: cover;
  min-height: calc(100vh - 12.5rem);
  padding: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  color: @color-light100;
  &-content {
    text-align: center;
    width: 70vw;
    min-width: 320px;
    padding-top: 2rem;
  }
  h1 {
    margin: 0 0 2rem;
    letter-spacing: -.03em;
    font-size: 10vw;
    line-height: 8vw;
  }
  p {
    margin: 0 auto 2rem;
  }
  &-leading {
    .leading;
    font-weight: 700;
  }
}

.section {
  padding: 2.5rem 0;
  div.leading {
    text-align: center;
    max-width: 100%;
  }
  div[class*="pure-u"] {
    margin: 0 auto;
  }
}

.refs {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  overflow: hidden;
  height: 5.5rem;
  padding: 0 1rem;
  @media screen and (min-width: 48em) {
    height: 2rem;
  }
  &-logo {
    // width: 100%;
    width: auto;
    height: 2rem;
    margin: 0 1rem 1.5rem;
    display: block;
    flex-shrink: 0;
    flex-grow: 0;
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
    opacity: .6;
  }
}

.modules {
  background-color: @color-s300;
}
.features {
  padding: 5rem 0;
  p:first-child {
    color: @color-s500;
  }
}

.img{
  &-avatar {
    width: 4rem;
    height: auto;
    border-radius: 4rem;
    vertical-align: middle;
    margin: 0 1rem;
  }
  &-circle {
    border-radius: 999em;
  }
}

